@@ -31,11 +31,15 @@ import javax.swing.SwingUtilities;
 
 import net.sourceforge.atunes.gui.views.panels.PlayerControlsPanel;
 import net.sourceforge.atunes.kernel.controllers.model.AbstractSimpleController;
+import net.sourceforge.atunes.kernel.modules.playlist.PlayListEventListener;
+import net.sourceforge.atunes.kernel.modules.playlist.PlayListHandler;
+import net.sourceforge.atunes.kernel.modules.podcast.PodcastFeedEntry;
 import net.sourceforge.atunes.kernel.modules.state.ApplicationState;
 import net.sourceforge.atunes.misc.log.LogCategories;
+import net.sourceforge.atunes.model.AudioObject;
 import net.sourceforge.atunes.utils.StringUtils;
 
-public final class PlayerControlsController extends AbstractSimpleController<PlayerControlsPanel> {
+public final class PlayerControlsController extends AbstractSimpleController<PlayerControlsPanel> implements PlayListEventListener {
 
     private static final int SECONDS_10 = 10000;
     private static final int SECONDS_30 = 30000;
@@ -55,6 +59,8 @@ public final class PlayerControlsController extends AbstractSimpleController<Pla
         super(panel);
         addBindings();
         addStateBindings();
+        
+        PlayListHandler.getInstance().addPlayListEventListener(this);
     }
 
     @Override
@@ -255,5 +261,21 @@ public final class PlayerControlsController extends AbstractSimpleController<Pla
         Font currentFont = label.getFont();
         label.setFont(new Font(currentFont.getFontName(), Font.ITALIC, Math.max(currentFont.getSize() - 2, 8)));
         return label;
+    }
+    
+    @Override
+    public void clear() {
+    	// TODO Auto-generated method stub
+    	
+    }
+    
+    @Override
+    public void selectedAudioObjectChanged(AudioObject audioObject) {
+        // Disable slider if audio object is a radio or podcast feed entry
+        boolean b = audioObject.isSeekable();
+        if (b && audioObject instanceof PodcastFeedEntry) {
+            b = ApplicationState.getInstance().isUseDownloadedPodcastFeedEntries();
+        }
+        setSlidable(b);
     }
 }
